# NGSgeno

./: .gitignore  360_237_217_240_Home.py  README.md  Run_NGSgeno.bat  Run_version_select.bat  Update_modules.bat  alt_ngsgeno.py  changelog.txt  display_components.py  index.html  load_data.py  ngsgeno.py  ngsgeno_gr.py  ngsrun.bat  pipeline_stage.py  pyproject.toml  requirements.txt  sidebar_components.py  startup.py  stutil.py  tag_and_push.ps1  tag_and_push.sh
.streamlit/: config.toml
cgi-bin/: cgi-analysis.py  cgi-dashboard.py  cgi-echo.py  cgi-nimbus.py  cgi-nimbus1.py  cgi-nimbus2.py  cgi_util.py
pages/: 1_360_237_247_254_Pipeline.py
static/: style.css
